2003-06-14 Craig Franklin <craigfranklin@attbi.com>
  * Fixed error in the range check for 17xx movpf anf movfp instructions.

2003-06-04 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.4 Released.
  * Replaced or removed obsolete macros in configure.ac.

2003-06-01 Craig Franklin <craigfranklin@attbi.com>
  * Added new processors:
    p16c557 p16c747 p16f648a p16f684 p16f737 p16f767 p16f777 p18f2331 
    p18f2431 p18f2439 p18f2539 p18f4331 p18f4431 p18f4439 p18f4539 
    p18f6520 p18f6525 p18f6585 p18f6621 p18f6680 p18f8520 p18f8525
    p18f8585 p18f8621 p18f8680 rf675f rf675h rf675k
  * Updated header files and linker scripts.

2003-05-20 Craig Franklin <craigfranklin@attbi.com>
  * Updated scripts to automake-1.6 and autoconf-2.57.
  * Ran autoscan and fixed reported problems.
  * Added AM_MAINTAINER_MODE to autoconf.

2003-05-10 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.3 Released.  
  * Fixed seg fault in gpasm when difference between coff symbols is 
    calculated. 
  * Fixed map file bug that caused the end section address to be reported
    incorrectly.
  * Added gplink command line option to fill unused unprotected program
    memory.
  * Added gplink testsuite.

2003-05-06 Craig Franklin <craigfranklin@attbi.com>
  * Fixed conditional assembly of INCLUDE directives in gpasm. 
  * Fixed seg fault in gplink when object has no sections or symbols.
  * Fixed target memory allocation in gplink when section size = page size
  * Fixed target memory allocation in gplink when section size = 1
  * Implemented section fill in gplink.

2003-05-03  Scott Dattalo  <scott@dattalo.com>
  * 18f Bit instructions were not handling the Access bit properly

2003-04-19 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.2 Released.
  * Fixed section size bug in org directives when used in gpasm coff outputs.
  * Fixed bug in cod file address size that confused MPLAB.
  * Fixed bug in lexer when < and > were used in the same expression.