@@ -1,3 +1,15 @@
+2003-06-22 Craig Franklin <craigfranklin@attbi.com>
+  * Changed coff to use byte addressing for program memory of 18xx devices.
+  * Changed absolute coff sections generated with org directive to use
+    org_"number" for a name instead of org_"address".
+  * Added missing relocation for "$" symbol.
+  * Fixed bug in gpvo which could cause section data to not be printed for
+    18xx devices.
+  * Added range warning to gplink for 18xx relative branches.
+  * Changed default behavior of the 18xx access bit in gplink to be like
+    gpasm. 
+  * Changed build directory for rpms.
+
 2003-06-14 Craig Franklin <craigfranklin@attbi.com>
   * Fixed error in the range check for 17xx movpf anf movfp instructions.
 
